--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <title>TNT Shop</title>
+        <!-- ================= tailwind  ==================== -->
+        <link rel="stylesheet" href="../css/tailwind.css">
 
         <!-- ================= Font awsome ==================== -->
         <link
